--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             margin: auto;
             padding-top: 25px;
         }
+         @media (max-width: 900px) {.help h1{width: 95%; font-size: 30px;}}
         .help{
             height: 100vh;
             background-color: #FAF9F9;
